# docs/swagger.yaml
@@ -67,6 +67,17 @@ definitions:
     - email
     - username
     type: object
+  request.ChangePasswordRequest:
+    properties:
+      new_password:
+        minLength: 6
+        type: string
+      old_password:
+        type: string
+    required:
+    - new_password
+    - old_password
+    type: object
   request.CreatePostRequest:
     properties:
       content_html:
@@ -738,32 +749,6 @@ paths:
       tags:
       - User
   /users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: 删除用户
-      parameters:
-      - description: 用户ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            $ref: '#/definitions/response.Response'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/response.Response'
-      security:
-      - ApiKeyAuth: []
-      summary: 删除用户
-      tags:
-      - User
     get:
       consumes:
       - application/json
@@ -866,6 +851,42 @@ paths:
       security:
       - ApiKeyAuth: []
       summary: 更新个人信息
+      tags:
+      - User
+  /users/password:
+    put:
+      consumes:
+      - application/json
+      description: 登录后修改密码
+      parameters:
+      - description: 修改密码信息
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/request.ChangePasswordRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: '{"code": 200, "msg": "成功", "data": null}'
+          schema:
+            $ref: '#/definitions/response.Response'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/response.Response'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/response.Response'
+        "422":
+          description: '{"code": 422, "msg": "参数校验失败", "data": null, "errors": {...}}'
+          schema:
+            $ref: '#/definitions/response.Response'
+      security:
+      - ApiKeyAuth: []
+      summary: 修改密码
       tags:
       - User
 securityDefinitions:
