# internal/api/request/user_request.go
@@ -25,3 +25,8 @@ type LoginRequest struct {
 	Account  string `json:"account" binding:"required" label:"账号"`
 	Password string `json:"password" binding:"required" label:"密码"`
 }
+
+type ChangePasswordRequest struct {
+	OldPassword string `json:"old_password" binding:"required" label:"旧密码"`
+	NewPassword string `json:"new_password" binding:"required,min=6" label:"新密码"`
+}
